# EventApp

./: .replit  pyproject.toml  replit.nix  requirements.txt
evenement/: admin.py  models.py  urls.py  views.py
evenement/migrations/: 0001_initial.py  0002_favoris.py  0003_auto_20240224_0630.py  0004_auto_20240226_0657.py  0005_auto_20240227_1834.py
evenement/templates/: category.html  detail.html  events_by_category.html  favoris.html
event/: settings.py  urls.py  views.py
event/templates/: credit.html  event.html  footer.html  home.html
organisator/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
organisator/migrations/: 0001_initial.py  0002_auto_20240118_0709.py  0003_auto_20240119_1200.py  0004_organisateur_pays.py  0005_auto_20240229_0301.py
organisator/templates/: connexion.html  dashboard.html  header.html  organ-login.html  organ-login2.html  register-organisation.html
participant/: __init__.py  admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
participant/migrations/: 0001_initial.py  0002_auto_20240131_1152.py
participant/templates/: headers.html  informations.html  login.html  navigation.html  part-register.html  part-register2.html  participant.html  profile-user.html  profile.html
static/event/: manifest.json
staticfiles/organisator/css/: index.css
staticfiles/participant/js/: favoris.js  pop-up.js  profile-user.js
ticket/: models.py
ticket/migrations/: 0001_initial.py
