[tool.poetry]
name = "event"
version = "0.1.0"
description = "Event garuantee to gabon"
authors = ["kholeur9"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0"
git-python = "^1.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
